--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:padding="20dp"
-    tools:context=".MainActivity">
+    tools:context=".ChooseYourQuiz">
 
     <LinearLayout
         android:layout_width="match_parent"
