--- a/app/src/main/res/layout/activity_choose_your_quiz.xml
+++ b/app/src/main/res/layout/activity_choose_your_quiz.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_flag_of_kuwait"
+        android:src="@drawable/flags"
         app:layout_constraintBottom_toTopOf="@+id/grammerQuizImageView"
         app:layout_constraintEnd_toStartOf="@+id/carQuizImageView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,7 +29,7 @@
         android:layout_height="180dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:src="@drawable/ic_flag_of_brazil"
+        android:src="@drawable/carbrands"
         app:layout_constraintEnd_toEndOf="@+id/animalQuizImageView"
         app:layout_constraintStart_toEndOf="@+id/FalgQuizImageView"
         app:layout_constraintTop_toTopOf="@+id/FalgQuizImageView" />
@@ -40,7 +40,7 @@
         android:layout_height="180dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="216dp"
-        android:src="@drawable/grammeract"
+        android:src="@drawable/grammer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
